# AI

./: .gitignore  pyproject.toml
heuristic_function/: pyproject.toml
heuristic_function/heuristic_function/: informed_search_algorithim.ipynb  uninformed_search_alogorithim.ipynb
openai_api/: pyproject.toml
openai_api/openai_api/: going_beyond_text_completion.ipynb  openapi_intro.ipynb  text_chat.ipynb
prompt_engineering/: pyproject.toml
prompt_engineering/prompt_engineering/: advanced_prompt_eng.ipynb  prompt_eng_bus_app.ipynb  prompt_eng_chat_bot.ipynb  prompt_eng_intro.ipynb
pytorch/: pyproject.toml
pytorch/data/: animals.csv  salary.txt
pytorch/pytorch/intro/: architecture.ipynb  intro.ipynb  model_evaluation.ipynb  model_training.ipynb
vector_database/: pyproject.toml
vector_database/data/: vector_set1.json  vector_set2.json  vectors.json
vector_database/vector_database/: .env  intro_pinecone.ipynb  pinecone_performance_tuning.ipynb  pinecone_ventor_manipulation.ipynb  vectorizing_images.ipynb
