[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Tapajoyti Chowdhury <tchowdhury@tnsiit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
openai = "^1.60.2"
python-dotenv = "^1.0.1"
networkx = "^3.4.2"
pinecone = {extras = ["asyncio"], version = "^6.0.1"}
pillow = "^11.1.0"
torch = "^2.6.0"
transformers = "^4.49.0"
opencv-python = "^4.11.0.86"
tensorflow = "^2.18.0"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
torchmetrics = "^1.6.2"
imagegrid = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
