[tool.poetry]
name = "heuristic-function"
version = "0.1.0"
description = ""
authors = ["Tapajoyti Chowdhury <tchowdhury@tnsiit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
